--- a/DAY-2/LAB EXERCISES/service.yaml
+++ b/DAY-2/LAB EXERCISES/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-nginx-service
+  name: my-llm-service
 spec:
   selector:
     app: llm
   ports:
   - protocol: TCP
-    port: 80
+    port: 8000
     nodePort: 30001
   type: NodePort
